# resolvelib

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.rst  CODE_OF_CONDUCT.md  DEVELOPMENT.rst  MANIFEST.in  Pipfile  README.rst  mypy.ini  noxfile.py  pyproject.toml  setup.cfg  setup.py  tasks.py
.github/workflows/: ci.yml  release.yml
examples/: extras_provider.py  pypi_wheel_provider.py  reporter_demo.py  sudoku.py
examples/visualization/: README.md  generate.py  main.css  main.js  reporter.py  run.py  run_pypi.py  template.html
news/: 1.feature.rst  101.feature.rst  113.feature.rst  126.bugfix.rst  129.feature  133.feature  135.feature  136.bugfix  138.bugfix  141.feature  143.feature  145.feature  150.bugfix  152.bugfix  153.feature  155.bugfix  156.feature  157.feature  158.feature  160.feature  162.bugfix  163.bugfix  164.bugfix  165.bugfix  166.feature  173.bugfix.rst  175.bugfix.rst  177.bugfix.rst  178.bugfix.rst  18.bugfix.rst  181.bugfix.rst  185.trivial.rst  187.significant.rst  188.feature.rst  193.trivial.rst  195.bugfix.rst  2.feature.rst  3.behavior.rst  4.bugfix.rst  42.feature.rst  (+13 more)
play/: resolve.py
src/resolvelib/: __init__.py  graphs.py  providers.py  providers.pyi  reporters.py  reporters.pyi  resolvers.py  resolvers.pyi  structs.py  structs.pyi
src/resolvelib/compat/: collections_abc.py  collections_abc.pyi
src/resolvelib/resolvers/: __init__.py  abstract.py  criterion.py  exceptions.py  resolution.py
tasks/: __init__.py
tests/: conftest.py  test_backjump_exhaustion.py  test_graphs.py  test_optimistic_backjumping.py  test_poc.py  test_resolvers.py  test_structs.py
tests/functional/: conftest.py
tests/functional/cocoapods/: test_resolvers_cocoapods.py
tests/functional/cocoapods/inputs/: README.md
tests/functional/cocoapods/inputs/case/: circular.json  complex_conflict.json  complex_conflict_unwinding.json  conflict.json  conflict_common_parent.json  conflict_on_child.json  contiguous_grouping.json  deep_complex_conflict.json  fixed_circular.json  previous_conflict.json  previous_primary_conflict.json  pruned_unresolved_orphan.json  root_conflict_on_child.json  shared_parent_dependency.json  shared_parent_dependency_with_swapping.json  simple.json  simple_with_base.json  simple_with_dependencies.json  simple_with_shared_dependencies.json  spapping_and_rewinding.json  swapping_changes_transitive_dependency.json  swapping_children_with_successors.json  three_way_conflict.json  unresolvable_child.json
tests/functional/cocoapods/inputs/index/: awesome.json  child_conflict.json  complex_conflict.json  complex_conflict_unwinding.json  conflict.json  contiguous_grouping.json  fixed_circular.json  fuzz.json  previous_conflict.json  previous_primary_conflict.json  restkit.json  root_conflict_on_child.json  rubygems-2016-02-15.json  rubygems-2016-09-11.json  rubygems-2016-10-06.json  rubygems-2016-11-05.json  rubygems-2017-01-24.json  rubygems-2017-02-15.json  rubygems.json  swap_child_with_successors.json  three_way_conflict.json  unresolvable_child.json
tests/functional/python/: py2index.py  test_resolvers_python.py
tests/functional/python/inputs/case/: backjump-test-1.json  backjump-test-2.json  backjump-test-3.json  backjump-test-4.json  chalice.json  cheroot.json  conflict-with-dependency.json  different-extras.json  issue-134-2.json  issue-134-3.json  issue-134.json  pyrex-1.9.8.json  same-package-extras.json  same-package.json  with-without-extras.json
tests/functional/python/inputs/index/: backjump-test-2.json  backjump-test-3.json  backjump-test-4.json  issue-134-2.json  issue-134.json  pypi-2020-02-13-chalice.json  pypi-2020-02-13-dask.json  pypi-2020-02-15-pandas.json  pypi-2020-02-15-pyrax.json  pypi-2020-02-19-virtualenv-six.json  pypi-2020-11-17-cheroot.json  same-package.json
tests/functional/swift-package-manager/: test_resolvers.py  test_resolvers_swift.py
tests/functional/swift-package-manager/inputs/: README.md
