[build-system]
requires = ['setuptools>=36.2.2', 'wheel>=0.28.0']

[tool.black]
line-length = 79
include = '^/(docs|examples|src|tasks|tests)/.+\.py$'

[tool.isort]
profile = "black"
line_length = 79
multi_line_output = 3

[tool.towncrier]
package = 'resolvelib'
package_dir = 'src'
filename = 'CHANGELOG.rst'
directory = 'news/'
title_format = '{version} ({project_date})'
issue_format = '`#{issue} <https://github.com/sarugaku/resolvelib/issues/{issue}>`_'
template = 'news/CHANGELOG.rst.jinja2'

[[tool.towncrier.type]]
directory = 'feature'
name = 'Features'
showcontent = true

[[tool.towncrier.type]]
directory = 'bugfix'
name = 'Bug Fixes'
showcontent = true

[[tool.towncrier.type]]
directory = 'trivial'
name = 'Trivial Changes'
showcontent = false
