[metadata]
name = resolvelib
description = Resolve abstract dependencies into concrete ones
url = https://github.com/sarugaku/resolvelib
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
license = ISC License
keywords =
    dependency
    resolution
classifier =
    Development Status :: 1 - Planning
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false

[bdist_wheel]
universal = 1
