[metadata]
name = resolvelib
version = attr: resolvelib.__version__
description = Resolve abstract dependencies into concrete ones
url = https://github.com/sarugaku/resolvelib
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
license = ISC License
keywords =
    dependency
    resolution
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: ISC License (ISCL)
    Operating System :: OS Independent
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
include_package_data = true
zip_safe = false

[options.packages.find]
where = src

[options.extras_require]
examples =
    html5lib
    packaging
    requests
lint =
	black
	flake8
test =
    commentjson
    packaging
    pytest
release =
	setl
    towncrier

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 80
exclude =
    .git,
    .venvs,
    __pycache__,
    build,
    dist,
