[metadata]
name = resolvelib
version = attr: resolvelib.__version__
description = Resolve abstract dependencies into concrete ones
url = https://github.com/sarugaku/resolvelib
author = Tzu-ping Chung
author_email = uranusjr@gmail.com
long_description = file: README.rst
long_description_content_type = text/x-rst
license = ISC License
keywords =
	dependency
	resolution
classifier =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	License :: OSI Approved :: ISC License (ISCL)
	Operating System :: OS Independent
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
	= src
packages = find:
include_package_data = true
zip_safe = false
python_requires = >=2.7, !=3.0, !=3.1, !=3.2, !=3.3, !=3.4, !=3.5, !=3.6

[options.packages.find]
where = src

[options.extras_require]
examples =
	html5lib
	packaging
	pygraphviz
	requests
lint =
	black
	flake8
	mypy
	isort
	types-requests
test =
	commentjson
	packaging
	pytest
release =
	build
	towncrier
	twine

[bdist_wheel]
universal = 1

[flake8]
max-line-length = 88
select = C,E,F,W,B
ignore = E203, W503, F401
exclude =
	.git,
	.venv,
	.venvs,
	.nox,
	__pycache__,
	build,
	dist,
	*.pyi
